feat: post request to get prices in bulk
